# quart-vite-template

./: .dockerignore  .gitignore  README.md
.github/workflows/: backend.yml  server.yml
backend/: entrypoint.backend.dev.sh  entrypoint.backend.prod.sh  pyproject.toml
backend/package/: __init__.py  app.py  logger.py
backend/package/redis/: launch_redis_workers.py
backend/package/routes/: __init__.py  example.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.dev.sh  entrypoint.permissions.sh  entrypoint.prod.sh
frontend/: eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
server/: pyproject.toml
server/example/: __init__.py
server/src/: app.py
server/src/routes/: frontend.py
server/src/routes/tests/: conftest.py  test_example.py
