[project]
name = "quart-vite-example"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = ["quart", "uvicorn[standard]", "rq"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov"]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["package"]

[tool.ruff]
exclude = ["*tests*"]
include = ["pyproject.toml", "package/**/*.py"]

[tool.ruff.lint]
select = [
    "I",
    "D",
    # Augment the convention by requiring an imperative mood for all docstrings.
    "D401",
    # Unused imports
]
ignore = [
    # Ignore req. for public facing functions docstrings
    "F401",
    "D10",
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--cov=."]
filterwarnings = ["error", "ignore::DeprecationWarning"]
pythonpath = ["."]


[tool.coverage.report]
omit = ["*/tests/*"]
